--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,16 @@
 {
   "manifest_version": 3,
   "name": "GitRepoTools",
+  "short_name": "GitRepoTools",
   "version": "1.0",
   "description": "Essential tools for GitHub repositories - Web IDE integration, documentation, and repository insights",
+  "author": "Rohit Wadhwa",
+  "homepage_url": "https://github.com/rohit-wadhwa/git-repo-tools",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
@@ -21,6 +26,7 @@
     {
       "matches": ["https://github.com/*"],
       "js": ["content.js"],
+      "css": ["content.css"],
       "run_at": "document_idle"
     }
   ],
@@ -28,6 +34,8 @@
     "service_worker": "background.js"
   },
   "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
